# libcher

./: .gitignore  .gitmodules  CMakeLists.txt
examples/run/: CMakeLists.txt  app_config.cmake  main.cpp
examples/simpleTest/: CMakeLists.txt  app_config.cmake  main.cpp
include/: datk.hpp  nodecontroller.hpp  nodeio.hpp  nodeprocess.hpp
scripts/: appnode.py  local.py  run.py
src/: nodecontroller.cpp  nodeprocess.cpp
